; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_get_message.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_get_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.commit_message = type { i8*, i8*, i32, i32 }

@.str = private unnamed_addr constant [9 x i8] c"%s... %s\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"parent of %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.commit*, %struct.commit_message*)* @get_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_message(%struct.commit* %0, %struct.commit_message* %1) #0 {
  %3 = alloca %struct.commit*, align 8
  %4 = alloca %struct.commit_message*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.commit* %0, %struct.commit** %3, align 8
  store %struct.commit_message* %1, %struct.commit_message** %4, align 8
  %8 = load %struct.commit*, %struct.commit** %3, align 8
  %9 = call i32 (...) @get_commit_output_encoding()
  %10 = call i32 @logmsg_reencode(%struct.commit* %8, i32* null, i32 %9)
  %11 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %12 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %11, i32 0, i32 3
  store i32 %10, i32* %12, align 4
  %13 = load %struct.commit*, %struct.commit** %3, align 8
  %14 = call i8* @short_commit_name(%struct.commit* %13)
  store i8* %14, i8** %5, align 8
  %15 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %16 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @find_commit_subject(i32 %17, i8** %6)
  store i32 %18, i32* %7, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @xmemdupz(i8* %19, i32 %20)
  %22 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %23 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %26 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i8* (i8*, i8*, ...) @xstrfmt(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %24, i32 %27)
  %29 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %30 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %29, i32 0, i32 0
  store i8* %28, i8** %30, align 8
  %31 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %32 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %31, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = call i8* (i8*, i8*, ...) @xstrfmt(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %33)
  %35 = load %struct.commit_message*, %struct.commit_message** %4, align 8
  %36 = getelementptr inbounds %struct.commit_message, %struct.commit_message* %35, i32 0, i32 1
  store i8* %34, i8** %36, align 8
  ret i32 0
}

declare dso_local i32 @logmsg_reencode(%struct.commit*, i32*, i32) #1

declare dso_local i32 @get_commit_output_encoding(...) #1

declare dso_local i8* @short_commit_name(%struct.commit*) #1

declare dso_local i32 @find_commit_subject(i32, i8**) #1

declare dso_local i32 @xmemdupz(i8*, i32) #1

declare dso_local i8* @xstrfmt(i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
